@@ -1,5 +1,10 @@
 package de.gurkenlabs.litiengine;
 
+import de.gurkenlabs.litiengine.entities.IEntity;
+import de.gurkenlabs.litiengine.environment.tilemap.IMap;
+import de.gurkenlabs.litiengine.util.ArrayUtilities;
+import de.gurkenlabs.litiengine.util.MathUtilities;
+import de.gurkenlabs.litiengine.util.geom.GeometricUtilities;
 import java.awt.Color;
 import java.awt.geom.Ellipse2D;
 import java.awt.geom.Line2D;
@@ -9,33 +14,23 @@ import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
-
-import de.gurkenlabs.litiengine.entities.IEntity;
-import de.gurkenlabs.litiengine.environment.tilemap.IMap;
-import de.gurkenlabs.litiengine.util.ArrayUtilities;
-import de.gurkenlabs.litiengine.util.MathUtilities;
-import de.gurkenlabs.litiengine.util.geom.GeometricUtilities;
 
 /**
- * A random number generator instance that provides enhanced functionalities for the java default {@code Random}
- * implementation.
+ * A random number generator instance that provides enhanced functionalities for the java default {@code Random} implementation.
  */
-@SuppressWarnings("serial")
 public final class GameRandom extends java.util.Random {
   private static final String INVALID_BOUNDS_ERROR = "min value is > than max value";
   private static final String ARRAY_MUST_NOT_BE_EMPTY = "array to chose an element from must not be null or empty.";
   private static final String INVALID_AMOUNT_FOR_SAMPLING_WITHOUT_REPLACEMENT =
-      "amount must be <= the specified array length for sampling without replacement.";
+    "amount must be <= the specified array length for sampling without replacement.";
 
-  GameRandom() {}
+  GameRandom() {
+  }
 
   /**
    * Sets the seed of this random number generator using a {@code String} seed.
    *
-   * @param seed
-   *          The initial seed.
-   *
+   * @param seed The initial seed.
    * @see #setSeed(long)
    */
   public void setSeed(String seed) {
@@ -78,7 +73,7 @@ public final class GameRandom extends java.util.Random {
       List<T> copied = new ArrayList<>(collection);
       this.shuffle(copied);
 
-      return copied.stream().limit(amount).collect(Collectors.toList());
+      return copied.stream().limit(amount).toList();
     }
 
     List<T> copied = new ArrayList<>(amount);
@@ -93,10 +88,8 @@ public final class GameRandom extends java.util.Random {
   /**
    * Chooses a pseudo-random element from the specified array.
    *
-   * @param <T>
-   *          The type of the elements in the array.
-   * @param array
-   *          The array to choose from.
+   * @param <T>   The type of the elements in the array.
+   * @param array The array to choose from.
    * @return A pseudo-random element from the array or null if the array is empty.
    */
   public <T> T choose(T[] array) {
@@ -110,12 +103,9 @@ public final class GameRandom extends java.util.Random {
   /**
    * Chooses a pseudo-random element from the specified array.
    *
-   * @param array
-   *          The array to choose from.
+   * @param array The array to choose from.
    * @return A pseudo-random element from the array.
-   *
-   * @throws IllegalArgumentException
-   *           When the specified array is null or empty.
+   * @throws IllegalArgumentException When the specified array is null or empty.
    */
   public int choose(int... array) {
     if (array == null || array.length == 0) {
@@ -128,12 +118,9 @@ public final class GameRandom extends java.util.Random {
   /**
    * Chooses a pseudo-random element from the specified array.
    *
-   * @param array
-   *          The array to choose from.
+   * @param array The array to choose from.
    * @return A pseudo-random element from the array.
-   *
-   * @throws IllegalArgumentException
-   *           When the specified array is null or empty.
+   * @throws IllegalArgumentException When the specified array is null or empty.
    */
   public long choose(long... array) {
     if (array == null || array.length == 0) {
@@ -146,12 +133,9 @@ public final class GameRandom extends java.util.Random {
   /**
    * Chooses a pseudo-random element from the specified array.
    *
-   * @param array
-   *          The array to choose from.
+   * @param array The array to choose from.
    * @return A pseudo-random element from the array.
-   *
-   * @throws IllegalArgumentException
-   *           When the specified array is null or empty.
+   * @throws IllegalArgumentException When the specified array is null or empty.
    */
   public double choose(double... array) {
     if (array == null || array.length == 0) {
@@ -164,12 +148,9 @@ public final class GameRandom extends java.util.Random {
   /**
    * Chooses a pseudo-random element from the specified array.
    *
-   * @param array
-   *          The array to choose from.
+   * @param array The array to choose from.
    * @return A pseudo-random element from the array.
-   *
-   * @throws IllegalArgumentException
-   *           When the specified array is null or empty.
+   * @throws IllegalArgumentException When the specified array is null or empty.
    */
   public String choose(String... array) {
     if (array == null || array.length == 0) {
@@ -182,10 +163,8 @@ public final class GameRandom extends java.util.Random {
   /**
    * Chooses a pseudo-random element from the specified collection.
    *
-   * @param <T>
-   *          The type of the elements in the collection.
-   * @param coll
-   *          The collection to choose from.
+   * @param <T>  The type of the elements in the collection.
+   * @param coll The collection to choose from.
    * @return A pseudo-random element from the array or null if the collection is empty.
    */
   public <T> T choose(Collection<T> coll) {
@@ -206,10 +185,8 @@ public final class GameRandom extends java.util.Random {
   /**
    * Shuffles the elements in the specified array.
    *
-   * @param <T>
-   *          The type of the elements in the collection.
-   * @param array
-   *          The array to be shuffled.
+   * @param <T>   The type of the elements in the collection.
+   * @param array The array to be shuffled.
    */
   public <T> void shuffle(T[] array) {
     for (int i = 0; i < array.length; i++) {
@@ -223,8 +200,7 @@ public final class GameRandom extends java.util.Random {
   /**
    * Shuffles the elements in the specified array.
    *
-   * @param array
-   *          The array to be shuffled.
+   * @param array The array to be shuffled.
    */
   public void shuffle(int[] array) {
     for (int i = 0; i < array.length; i++) {
@@ -238,8 +214,7 @@ public final class GameRandom extends java.util.Random {
   /**
    * Shuffles the elements in the specified array.
    *
-   * @param array
-   *          The array to be shuffled.
+   * @param array The array to be shuffled.
    */
   public void shuffle(long[] array) {
     for (int i = 0; i < array.length; i++) {
@@ -253,8 +228,7 @@ public final class GameRandom extends java.util.Random {
   /**
    * Shuffles the elements in the specified array.
    *
-   * @param array
-   *          The array to be shuffled.
+   * @param array The array to be shuffled.
    */
   public void shuffle(double[] array) {
     for (int i = 0; i < array.length; i++) {
@@ -268,10 +242,8 @@ public final class GameRandom extends java.util.Random {
   /**
    * Shuffles the elements in the specified collection.
    *
-   * @param <T>
-   *          The type of the elements in the collection.
-   * @param coll
-   *          The collection to be shuffled.
+   * @param <T>  The type of the elements in the collection.
+   * @param coll The collection to be shuffled.
    */
   public <T> void shuffle(List<T> coll) {
     Collections.shuffle(coll, this);
@@ -293,11 +265,8 @@ public final class GameRandom extends java.util.Random {
   /**
    * Shuffles the algebraic sign of the specified int value.
    *
-   * @param value
-   *          The value to shuffle.
-   *
+   * @param value The value to shuffle.
    * @return Either the specified value; or its negative equivalent (multiplied by -1).
-   *
    * @see #nextSign()
    */
   public int shuffleSign(int value) {
@@ -307,11 +276,8 @@ public final class GameRandom extends java.util.Random {
   /**
    * Shuffles the algebraic sign of the specified float value.
    *
-   * @param value
-   *          The value to shuffle.
-   *
+   * @param value The value to shuffle.
    * @return Either the specified value; or its negative equivalent (multiplied by -1).
-   *
    * @see #nextSign()
    */
   public float shuffleSign(float value) {
@@ -321,11 +287,8 @@ public final class GameRandom extends java.util.Random {
   /**
    * Shuffles the algebraic sign of the specified long value.
    *
-   * @param value
-   *          The value to shuffle.
-   *
+   * @param value The value to shuffle.
    * @return Either the specified value; or its negative equivalent (multiplied by -1).
-   *
    * @see #nextSign()
    */
   public long shuffleSign(long value) {
@@ -335,11 +298,8 @@ public final class GameRandom extends java.util.Random {
   /**
    * Shuffles the algebraic sign of the specified double value.
    *
-   * @param value
-   *          The value to shuffle.
-   *
+   * @param value The value to shuffle.
    * @return Either the specified value; or its negative equivalent (multiplied by -1).
-   *
    * @see #nextSign()
    */
   public double shuffleSign(double value) {
@@ -349,28 +309,24 @@ public final class GameRandom extends java.util.Random {
   /**
    * Returns a pseudo-random {@code long} value between zero (inclusive) and the specified bound (exclusive).
    *
-   * @param bound
-   *          the upper bound (exclusive). Must be positive.
+   * @param bound the upper bound (exclusive). Must be positive.
    * @return a pseudo-random {@code long} value between zero (inclusive) and the bound (exclusive)
-   * @throws IllegalArgumentException
-   *           if {@code bound} is not positive
+   * @throws IllegalArgumentException if {@code bound} is not positive
    */
+  @Override
   public long nextLong(final long bound) {
     return this.nextLong(0, bound);
   }
 
   /**
-   * Returns a pseudo-random {@code long} value between the specified origin (inclusive) and the specified bound
-   * (exclusive).
+   * Returns a pseudo-random {@code long} value between the specified origin (inclusive) and the specified bound (exclusive).
    *
-   * @param min
-   *          the least value returned
-   * @param bound
-   *          the upper bound (exclusive)
+   * @param min   the least value returned
+   * @param bound the upper bound (exclusive)
    * @return a pseudo-random {@code long} value between the origin (inclusive) and the bound (exclusive)
-   * @throws IllegalArgumentException
-   *           if {@code origin} is greater than {@code bound}
+   * @throws IllegalArgumentException if {@code origin} is greater than {@code bound}
    */
+  @Override
   public long nextLong(final long min, final long bound) {
     if (min == bound) {
       return min;
@@ -386,28 +342,24 @@ public final class GameRandom extends java.util.Random {
   /**
    * Returns a pseudo-random {@code double} value between zero (inclusive) and the specified bound (exclusive).
    *
-   * @param bound
-   *          the upper bound (exclusive). Must be positive.
+   * @param bound the upper bound (exclusive). Must be positive.
    * @return a pseudo-random {@code double} value between zero (inclusive) and the bound (exclusive)
-   * @throws IllegalArgumentException
-   *           if {@code bound} is not positive
+   * @throws IllegalArgumentException if {@code bound} is not positive
    */
+  @Override
   public double nextDouble(final double bound) {
     return this.nextDouble(0, bound);
   }
 
   /**
-   * Returns a pseudo-random {@code double} value between the specified origin (inclusive) and the specified bound
-   * (exclusive).
+   * Returns a pseudo-random {@code double} value between the specified origin (inclusive) and the specified bound (exclusive).
    *
-   * @param min
-   *          the least value returned
-   * @param bound
-   *          the upper bound (exclusive)
+   * @param min   the least value returned
+   * @param bound the upper bound (exclusive)
    * @return a pseudo-random {@code double} value between the origin (inclusive) and the bound (exclusive)
-   * @throws IllegalArgumentException
-   *           if {@code origin} is greater than {@code bound}
+   * @throws IllegalArgumentException if {@code origin} is greater than {@code bound}
    */
+  @Override
   public double nextDouble(final double min, final double bound) {
     if (min == bound) {
       return min;
@@ -423,28 +375,24 @@ public final class GameRandom extends java.util.Random {
   /**
    * Returns a pseudo-random {@code float} value between zero (inclusive) and the specified bound (exclusive).
    *
-   * @param bound
-   *          the upper bound (exclusive). Must be positive.
+   * @param bound the upper bound (exclusive). Must be positive.
    * @return a pseudo-random {@code float} value between zero (inclusive) and the bound (exclusive)
-   * @throws IllegalArgumentException
-   *           if {@code bound} is not positive
+   * @throws IllegalArgumentException if {@code bound} is not positive
    */
+  @Override
   public float nextFloat(final float bound) {
     return this.nextFloat(0, bound);
   }
 
   /**
-   * Returns a pseudo-random {@code float} value between the specified origin (inclusive) and the specified bound
-   * (exclusive).
+   * Returns a pseudo-random {@code float} value between the specified origin (inclusive) and the specified bound (exclusive).
    *
-   * @param min
-   *          the least value returned
-   * @param bound
-   *          the upper bound (exclusive)
+   * @param min   the least value returned
+   * @param bound the upper bound (exclusive)
    * @return a pseudo-random {@code float} value between the origin (inclusive) and the bound (exclusive)
-   * @throws IllegalArgumentException
-   *           if {@code origin} is greater than {@code bound}
+   * @throws IllegalArgumentException if {@code origin} is greater than {@code bound}
    */
+  @Override
   public float nextFloat(final float min, final float bound) {
     if (min == bound) {
       return min;
@@ -458,17 +406,14 @@ public final class GameRandom extends java.util.Random {
   }
 
   /**
-   * Returns a pseudo-random {@code int} value between the specified origin (inclusive) and the specified bound
-   * (exclusive).
+   * Returns a pseudo-random {@code int} value between the specified origin (inclusive) and the specified bound (exclusive).
    *
-   * @param min
-   *          the least value returned
-   * @param bound
-   *          the upper bound (exclusive)
+   * @param min   the least value returned
+   * @param bound the upper bound (exclusive)
    * @return a pseudo-random {@code int} value between the origin (inclusive) and the bound (exclusive)
-   * @throws IllegalArgumentException
-   *           if {@code origin} is greater than {@code bound}
+   * @throws IllegalArgumentException if {@code origin} is greater than {@code bound}
    */
+  @Override
   public int nextInt(final int min, final int bound) {
     if (min == bound) {
       return min;
@@ -490,12 +435,11 @@ public final class GameRandom extends java.util.Random {
    * Probes a pseudo-random value between 0.0 and 1.0 and checks whether it matches the specified probability.
    *
    * <p>
-   * Example: if the specified probability is 0.5, the sampled value needs to be less than or equal to the specified value
-   * in order for this method to return true.
+   * Example: if the specified probability is 0.5, the sampled value needs to be less than or equal to the specified value in order for this method to
+   * return true.
    * </p>
    *
-   * @param probability
-   *          The probability to check.
+   * @param probability The probability to check.
    * @return True if the sampled value matches the probability; otherwise false.
    */
   public boolean probe(final double probability) {
@@ -504,11 +448,9 @@ public final class GameRandom extends java.util.Random {
   }
 
   /**
-   * Returns a pseudo-random index that is distributed by the weights of the defined probability array. The index
-   * probabilities must sum up to 1;
+   * Returns a pseudo-random index that is distributed by the weights of the defined probability array. The index probabilities must sum up to 1;
    *
-   * @param indexProbabilities
-   *          The index with the probabilities for the related index.
+   * @param indexProbabilities The index with the probabilities for the related index.
    * @return A random index within the range of the specified array.
    */
   public int getIndex(final double[] indexProbabilities) {
@@ -529,14 +471,10 @@ public final class GameRandom extends java.util.Random {
   /**
    * Gets a pseudo-random location within the specified boundaries.
    *
-   * @param x
-   *          The min-x coordinate of the boundaries.
-   * @param y
-   *          The min-y coordinate of the boundaries.
-   * @param width
-   *          The width of the boundaries.
-   * @param height
-   *          The height of the boundaries.
+   * @param x      The min-x coordinate of the boundaries.
+   * @param y      The min-y coordinate of the boundaries.
+   * @param width  The width of the boundaries.
+   * @param height The height of the boundaries.
    * @return A pseudo-random location within the specified bounds.
    */
   public Point2D getLocation(final double x, final double y, final double width, final double height) {
@@ -549,8 +487,7 @@ public final class GameRandom extends java.util.Random {
   /**
    * Gets a pseudo-random location within the specified boundaries.
    *
-   * @param rect
-   *          The rectangle that defines the boundaries.
+   * @param rect The rectangle that defines the boundaries.
    * @return A pseudo-random location within the specified bounds.
    */
   public Point2D getLocation(final Rectangle2D rect) {
@@ -560,10 +497,8 @@ public final class GameRandom extends java.util.Random {
   /**
    * Gets a pseudo-random location within the specified entity boundaries.
    *
-   * @param entity
-   *          The entity that defines the boundaries.
+   * @param entity The entity that defines the boundaries.
    * @return A pseudo-random location within the specified bounds.
-   *
    * @see IEntity#getBoundingBox()
    */
   public Point2D getLocation(final IEntity entity) {
@@ -573,10 +508,8 @@ public final class GameRandom extends java.util.Random {
   /**
    * Gets a pseudo-random location within the specified map boundaries.
    *
-   * @param map
-   *          The map that defines the boundaries.
+   * @param map The map that defines the boundaries.
    * @return A pseudo-random location within the specified bounds.
-   *
    * @see IMap#getBounds()
    */
   public Point2D getLocation(final IMap map) {
@@ -586,8 +519,7 @@ public final class GameRandom extends java.util.Random {
   /**
    * Gets a pseudo-random location in the specified circle.
    *
-   * @param circle
-   *          The circle that defines the boundaries.
+   * @param circle The circle that defines the boundaries.
    * @return A pseudo-random location on the specified circle.
    */
   public Point2D getLocation(final Ellipse2D circle) {
@@ -604,10 +536,8 @@ public final class GameRandom extends java.util.Random {
   /**
    * Gets a pseudo-random location on the specified line.
    *
-   * @param line
-   *          The line that defines the boundaries.
+   * @param line The line that defines the boundaries.
    * @return A pseudo-random location on the specified line.
-   *
    * @see Line2D#getP1()
    * @see Line2D#getP2()
    */
@@ -618,10 +548,8 @@ public final class GameRandom extends java.util.Random {
   /**
    * Gets a pseudo-random location on the line connecting the two specified points.
    *
-   * @param start
-   *          The start point.
-   * @param end
-   *          The end point.
+   * @param start The start point.
+   * @param end   The end point.
    * @return A pseudo-random location on the line connecting the two specified points.
    */
   public Point2D getLocation(final Point2D start, final Point2D end) {
@@ -643,8 +571,7 @@ public final class GameRandom extends java.util.Random {
   /**
    * Gets a pseudo-random char value from the specified alphabet.
    *
-   * @param alphabet
-   *          The alphabet to chose the character from.
+   * @param alphabet The alphabet to chose the character from.
    * @return A pseudo-random character from the specified alphabet.
    */
   public char nextChar(final String alphabet) {
@@ -667,8 +594,7 @@ public final class GameRandom extends java.util.Random {
    * Characters will be chosen from the set of characters whose ASCII value is between 32 and 126 (inclusive)
    * </p>
    *
-   * @param length
-   *          The length of the String.
+   * @param length The length of the String.
    * @return A pseudo-random ASCII String.
    */
   public String nextAscii(int length) {
@@ -683,8 +609,7 @@ public final class GameRandom extends java.util.Random {
   /**
    * Gets a pseudo-random alphanumeric String of the specified length.
    *
-   * @param length
-   *          The length of the String.
+   * @param length The length of the String.
    * @return A pseudo-random alphanumeric String.
    */
   public String nextAlphanumeric(final int length) {
@@ -694,10 +619,8 @@ public final class GameRandom extends java.util.Random {
   /**
    * Gets a pseudo-random alphanumeric String of the specified length.
    *
-   * @param length
-   *          The length of the String.
-   * @param lowerCase
-   *          Indicates whether lower-case letters will be included in the String.
+   * @param length    The length of the String.
+   * @param lowerCase Indicates whether lower-case letters will be included in the String.
    * @return A pseudo-random alphanumeric String.
    */
   public String nextAlphanumeric(final int length, final boolean lowerCase) {
@@ -707,12 +630,9 @@ public final class GameRandom extends java.util.Random {
   /**
    * Gets a pseudo-random alphanumeric String of the specified length.
    *
-   * @param length
-   *          The length of the String.
-   * @param digit
-   *          Indicates whether digits will be included in the string.
-   * @param lowerCase
-   *          Indicates whether lower-case letters will be included in the String.
+   * @param length    The length of the String.
+   * @param digit     Indicates whether digits will be included in the string.
+   * @param lowerCase Indicates whether lower-case letters will be included in the String.
    * @return A pseudo-random alphanumeric String.
    */
   public String nextAlphanumeric(final int length, final boolean digit, final boolean lowerCase) {
@@ -740,8 +660,7 @@ public final class GameRandom extends java.util.Random {
   /**
    * Gets a pseudo-random alphabetic String of the specified length.
    *
-   * @param length
-   *          The length of the String.
+   * @param length The length of the String.
    * @return A pseudo-random alphabetic String.
    */
   public String nextAlphabetic(final int length) {
@@ -751,10 +670,8 @@ public final class GameRandom extends java.util.Random {
   /**
    * Gets a pseudo-random alphabetic String of the specified length.
    *
-   * @param length
-   *          The length of the String.
-   * @param lowerCase
-   *          Indicates whether lower-case letters will be included in the String.
+   * @param length    The length of the String.
+   * @param lowerCase Indicates whether lower-case letters will be included in the String.
    * @return A pseudo-random alphabetic String.
    */
   public String nextAlphabetic(final int length, final boolean lowerCase) {
@@ -764,14 +681,9 @@ public final class GameRandom extends java.util.Random {
   /**
    * Returns a randomized variant of a given color.
    *
-   * @param originalColor
-   *          The original color to be modified.
-   * @param colorVariance
-   *          The float value between 0 and 1 defining how strong the new Color's RGB values will deviate from the
-   *          original Color.
-   * @param alphaVariance
-   *          The float value between 0 and 1 defining how strong the new Color's Alpha will deviate from the original
-   *          Color.
+   * @param originalColor The original color to be modified.
+   * @param colorVariance The float value between 0 and 1 defining how strong the new Color's RGB values will deviate from the original Color.
+   * @param alphaVariance The float value between 0 and 1 defining how strong the new Color's Alpha will deviate from the original Color.
    * @return A pseudo-randomized variant of the original Color.
    */
   public Color nextColor(Color originalColor, float colorVariance, float alphaVariance) {
@@ -779,13 +691,13 @@ public final class GameRandom extends java.util.Random {
       return null;
     }
     int red = MathUtilities.clamp(
-        (int) (originalColor.getRed() + (originalColor.getRed() * this.nextFloat(colorVariance) * this.nextSign())), 0, 255);
+      (int) (originalColor.getRed() + (originalColor.getRed() * this.nextFloat(colorVariance) * this.nextSign())), 0, 255);
     int green = MathUtilities.clamp(
-        (int) (originalColor.getGreen() + (originalColor.getGreen() * this.nextFloat(colorVariance) * this.nextSign())), 0, 255);
+      (int) (originalColor.getGreen() + (originalColor.getGreen() * this.nextFloat(colorVariance) * this.nextSign())), 0, 255);
     int blue = MathUtilities.clamp(
-        (int) (originalColor.getBlue() + (originalColor.getBlue() * this.nextFloat(colorVariance) * this.nextSign())), 0, 255);
+      (int) (originalColor.getBlue() + (originalColor.getBlue() * this.nextFloat(colorVariance) * this.nextSign())), 0, 255);
     int alpha = MathUtilities.clamp(
-        (int) (originalColor.getAlpha() + (originalColor.getAlpha() * this.nextFloat(alphaVariance) * this.nextSign())), 0, 255);
+      (int) (originalColor.getAlpha() + (originalColor.getAlpha() * this.nextFloat(alphaVariance) * this.nextSign())), 0, 255);
     return new Color(red, green, blue, alpha);
 
   }
