@@ -2,7 +2,6 @@ package de.gurkenlabs.litiengine.util;
 
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class ListUtilities {
   private ListUtilities() {
@@ -14,6 +13,6 @@ public class ListUtilities {
   }
 
   public static List<Integer> getIntList(int... values) {
-    return Arrays.stream(values).boxed().collect(Collectors.toList());
+    return Arrays.stream(values).boxed().toList();
   }
 }
